--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -11,16 +11,16 @@
                 <span class="sr-only">(current)</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
             {% if app.user %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('user_index') }}">User</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('room_index') }}">Room</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('booking_index') }}">Booking</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_logout') }}">Deconnexion</a>
                 </li>
